# shift

./: .gitignore  LICENSE  README.md  core.py  main.py  pyproject.toml
.github/workflows/: ci.yml
cli/: config.yaml  config_loader.py  interface.py
detector/: categorical_drift_detector.py  numeric_drift_detector.py
shift_drift.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
utils/: descriptive_stats.py  helper.py  time_parser.py
